--- a/Practica1/Practic1.ipynb
+++ b/Practica1/Practic1.ipynb
@@ -687,6 +687,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "img = cv2.imread('WhatsApp Image 2021-04-13 at 11.44.00 AM.jpeg', -1)\n",
+    "\n",
+    "rgb_planes = cv2.split(img)\n",
+    "\n",
+    "result_planes = []\n",
+    "result_norm_planes = []\n",
+    "for plane in rgb_planes:\n",
+    "    dilated_img = cv2.dilate(plane, np.ones((7,7), np.uint8))\n",
+    "    bg_img = cv2.medianBlur(dilated_img, 21)\n",
+    "    diff_img = 255 - cv2.absdiff(plane, bg_img)\n",
+    "    norm_img = cv2.normalize(diff_img,None, alpha=0, beta=255, norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8UC1)\n",
+    "    result_planes.append(diff_img)\n",
+    "    result_norm_planes.append(norm_img)\n",
+    "\n",
+    "result = cv2.merge(result_planes)\n",
+    "result_norm = cv2.merge(result_norm_planes)\n",
+    "\n",
+    "cv2.imwrite('shadows_out.jpeg', result)\n",
+    "cv2.imwrite('shadows_out_norm.jpeg', result_norm)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -722,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
