--- a/Practica1/Practic1.ipynb
+++ b/Practica1/Practic1.ipynb
@@ -688,16 +688,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 2 2 2]\n",
+      " [0 0 0 ... 2 2 2]\n",
+      " [1 1 1 ... 1 1 1]\n",
+      " ...\n",
+      " [0 0 0 ... 4 3 2]\n",
+      " [0 0 0 ... 4 4 3]\n",
+      " [0 0 0 ... 4 4 3]]\n",
+      "[[0 0 0 ... 2 2 2]\n",
+      " [0 0 0 ... 2 2 2]\n",
+      " [1 1 1 ... 1 1 1]\n",
+      " ...\n",
+      " [0 0 0 ... 4 3 2]\n",
+      " [0 0 0 ... 4 4 3]\n",
+      " [0 0 0 ... 4 4 3]]\n",
+      "[[0 0 0 ... 2 2 2]\n",
+      " [0 0 0 ... 2 2 2]\n",
+      " [1 1 1 ... 1 1 1]\n",
+      " ...\n",
+      " [0 0 0 ... 4 3 2]\n",
+      " [0 0 0 ... 4 4 3]\n",
+      " [0 0 0 ... 4 4 3]]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,20 +733,44 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
+    "#Primero cargamos la imagen como una matriz de pixeles igual que con imageio\n",
     "img = cv2.imread('WhatsApp Image 2021-04-13 at 11.44.00 AM.jpeg', -1)\n",
+    "# El -1 es una opcion con la que estableces que use la imagen como esta\n",
+    "# sino la función te puederecortar la imagen\n",
     "\n",
-    "rgb_planes = cv2.split(img)\n",
+    "# Separo a la imagen en los tres colores y los guardo en una variable\n",
+    "planosRGB = cv2.split(img)\n",
     "\n",
     "result_planes = []\n",
     "result_norm_planes = []\n",
-    "for plane in rgb_planes:\n",
+    "for plane in planosRGB: # Realizo el proceso para cada color\n",
+    "    # Esta funcion (dilate) aumeta el tamaño de las secciones brillantes y\n",
+    "    # disminuye el de las secciones oscuras, esto lo hace combolucionando\n",
+    "    # con un kernel partigular.En este caso se elimina el texto.\n",
     "    dilated_img = cv2.dilate(plane, np.ones((7,7), np.uint8))\n",
+    "    \n",
+    "    # La funcion medianBlur toma los pixeles de los vordes y les asigna el valor de\n",
+    "    # la media suavizando asi todos los vordes, para esto tambien una un kernel especial.\n",
+    "    # Como de por si teniamos pocos bordes eliminando el texto con esto lo difuminamos.\n",
     "    bg_img = cv2.medianBlur(dilated_img, 21)\n",
+    "    \n",
+    "    # La funcion absdiff calcula la diferencia absoluta entre dos matrices,\n",
+    "    # La que tenemos el fondo difuminado y la original. Como no hay casi diferencia\n",
+    "    # en las partes blancas tenemos nos va aquedar las intencidades invertidas, por lo que\n",
+    "    # se lo restamos a 255. Le devuelvo la intencidad al blanco y se la quito al resto.\n",
     "    diff_img = 255 - cv2.absdiff(plane, bg_img)\n",
+    "    \n",
+    "    # La funcion normalize normalisa los valores de la matriz, uno elije como quiere que\n",
+    "    # se normalize eligiendo el norm_type, en nuestro caso le decimos que los reescale desde\n",
+    "    # alpha hasta beta (NORM_MINMAX), ademas le decimos que nuestra profundad de tonos es de 8 bits\n",
+    "    # y le especificamos que va a usar el canal 1 (CV_8UC1) \n",
     "    norm_img = cv2.normalize(diff_img,None, alpha=0, beta=255, norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8UC1)\n",
+    "    \n",
+    "    # Luego guardo la imagenes procesadas\n",
     "    result_planes.append(diff_img)\n",
     "    result_norm_planes.append(norm_img)\n",
     "\n",
+    "# Una ves realizado el proceso para los tres colores los vuelvo a juntar con la función merge.\n",
     "result = cv2.merge(result_planes)\n",
     "result_norm = cv2.merge(result_norm_planes)\n",
     "\n",
