--- a/Practica3/Practica3-Copy1.ipynb
+++ b/Practica3/Practica3-Copy1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -35,9 +35,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -499,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -742,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +772,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.05604978522331\n"
+      "54.244005951854\n"
      ]
     },
     {
@@ -805,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,8 +812,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -892,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +903,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "208440650520.18118\n",
+      "244778225426.72226\n",
       "18610826781.46344\n"
      ]
     }
@@ -923,32 +926,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "644080719.7753947\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Laton\n",
-    "r = 2.3* 0.001 #m\n",
-    "L = 255 * 0.001 #m\n",
-    "rho = 8730 # kg/m3\n",
-    "A = np.pi * r**2\n",
-    "I = (np.pi * r**4 )/4\n",
-    "bL1= 1.875\n",
-    "\n",
-    "E2=((0.35009818773372625/(1.325285596513956*0.09828272783068796)*2*np.pi)**2)*(((L/bL1)**4)*rho*A/I)\n",
-    "print(E2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -957,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -979,17 +956,6 @@
      "output_type": "stream",
      "text": [
       "32.348041927062184\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'f_' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-4aa32e04386c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mw_2\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mginput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw_2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Frecuencia: {np.median([f_[0][0] ,f_[1][0] ])}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'f_' is not defined"
      ]
     }
    ],
@@ -1007,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,8 +983,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1150,6 +1122,36 @@
     "    plt.ylim(0,0.3)\n",
     "    plt.xlim(25,500)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93288890478.66383\n",
+      "644080719.7753947\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Laton\n",
+    "r = 2.3* 0.001 #m\n",
+    "L = 255 * 0.001 #m\n",
+    "rho = 8730 # kg/m3\n",
+    "A = np.pi * r**2\n",
+    "I = (np.pi * r**4 )/4\n",
+    "bL1= 1.875\n",
+    "\n",
+    "E1=((w_2[0][0]*2*np.pi)**2)*((L/bL1)**4)*rho*A/I\n",
+    "\n",
+    "E2=((0.35009818773372625/(1.325285596513956*0.09828272783068796)*2*np.pi)**2)*(((L/bL1)**4)*rho*A/I)\n",
+    "print(E1)\n",
+    "print(E2)"
    ]
   },
   {
