Últimos retoques Primer informe

--- a/Practica3/Untitled.ipynb
+++ b/Practica3/Untitled.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "underlying-webmaster",
+   "execution_count": 1,
+   "id": "adjustable-ending",
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
        "8*L**4*rho*w/(bl**4*r**2)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dedicated-tract",
+   "id": "driving-facility",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "warming-myanmar",
+   "id": "optimum-nudist",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "correct-environment",
+   "id": "bizarre-mongolia",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "arctic-shoulder",
+   "id": "mexican-premises",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "scientific-auction",
+   "id": "freelance-missile",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "enclosed-charles",
+   "id": "traditional-annotation",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "union-comparison",
+   "id": "forward-commons",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "humanitarian-treaty",
+   "id": "universal-tulsa",
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +195,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "complete-velvet",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.07531207150822017\n"
+     ]
+    }
+   ],
+   "source": [
+    "uepa=0.4137714303894159\n",
+    "eue=0.7956718378126013\n",
+    "k=(4*np.pi*2*uepa**2)*eue/((4*np.pi + uepa**2)**(3/2))\n",
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "australian-point",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " La frecuencia del modo 1 es 32.531401772381884 Hz\n",
+      " La frecuencia del modo 2 es 203.88552966326534 Hz\n",
+      " La frecuencia del modo 3 es 570.7974537251092 Hz\n"
+     ]
+    }
+   ],
+   "source": [
+    "def w_i(betaL):\n",
+    "    r = 2.3 * 0.001 #m\n",
+    "    L = 255 * 0.001 #m\n",
+    "    E = 91.7 * 1e+9 #Pa\n",
+    "    rho = 8400 # kg/m3\n",
+    "    A = np.pi * r**2\n",
+    "    I = (np.pi * r**4 )/4\n",
+    "    zeta=0.1\n",
+    "    \n",
+    "    w_i = (betaL/L)**2 * np.sqrt( (E * I * (1-zeta**2) ) / (rho * A) )\n",
+    "    return w_i\n",
+    "\n",
+    "betaL_i = [1.875, 4.694, 7.854]\n",
+    "w = []\n",
+    "for i,b in enumerate(betaL_i):\n",
+    "    w.append(w_i(b))\n",
+    "    print(f' La frecuencia del modo {i+1} es {w_i(b)/(2*np.pi)} Hz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "hazardous-satisfaction",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61.09372728940412\n",
+      "5.796950164791182\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = 4.6 * 0.001 #m\n",
+    "L = 255 * 0.001 #m\n",
+    "E = 91.7 * 1e+9 #Pa\n",
+    "\n",
+    "\n",
+    "bL=4.694\n",
+    "dd=bL**2 / (4*L**2) * np.sqrt(E*(1-0.1**2)/8400)\n",
+    "dL=d*bL**2 / (2*L**3) * np.sqrt(E*(1-0.1**2)/8400)\n",
+    "dE=d*bL**2 / (8*L**2) * np.sqrt((1-0.1**2)/(8400*E))\n",
+    "dz=d*bL**2 / (4*L**2) * np.sqrt(E*0.1**2/(8400*(1-0.1**2)))\n",
+    "\n",
+    "ew=np.sqrt((dd*0.2*0.001)**2+(dL*2*0.001)**2+(dE*1.72*1e+9)**2+(dz*0.07)**2)\n",
+    "print(ew)\n",
+    "\n",
+    "w=33.5\n",
+    "\n",
+    "dw=2*w*((4/d)**2)*((L/bL)**4)*(8400/(1-(0.1**2)))\n",
+    "dd=(2/(d**3))*((4*w)**2)*((L/bL)**4)*(8400/(1-(0.1**2)))\n",
+    "dL=((4*w/d)**2)*(4*(L**3)/(bL**4))*(8400/(1-(0.1**2)))\n",
+    "dz=((4*w/d)**2)*((L/bL)**4)*(8400*2*0.1/((1-(0.1**2))**2))\n",
+    "\n",
+    "eE=np.sqrt((dw*0.3)**2+(dd*0.2)**2+(dL*2)**2+(dz*0.07)**2)*1e-9\n",
+    "print(eE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "professional-philosophy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy.stats as sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "greatest-antigua",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4 x + \\frac{x}{y} + 3 y$"
+      ],
+      "text/plain": [
+       "4*x + x/y + 3*y"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y = sy.symbols(\"x y\")\n",
+    "\n",
+    "f=x/y+3*y+4*x\n",
+    "\n",
+    "sys.variance(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "sonic-microphone",
+   "id": "convinced-trace",
    "metadata": {},
    "outputs": [],
    "source": []
