Separo y limpio los datos rawData

--- a/PracticaEspecial/Rabi/PlotDatarawData.ipynb
+++ b/PracticaEspecial/Rabi/PlotDatarawData.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "psychological-optics",
+   "id": "banner-tuesday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,55 +22,181 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "german-surveillance",
+   "cell_type": "markdown",
+   "id": "derived-moderator",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "files = {os.path.splitext(k)[0]: {} for k in os.listdir('data/rawData')}"
+    "### Creo un diccioonario con los nombres de las carpetas y el contenido de ellas, luesgo busco las carpetas que tienen trace names diferentes y las agrupo en distintos diccionarios uno para cada trace names.\n",
+    "\n",
+    "### Tambien hay carpetas que tienen archivos bkp, esos si son necesarios habria que tomarlos tambien."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "juvenile-decrease",
+   "id": "missing-theorem",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: '0\\t50\\t200.25\\t187\\t189.25\\t173.75\\t210\\t186\\t193.5\\t179.5\\t214\\t175.75\\t191\\t177.75\\t170.75\\t178.5\\t176.75\\t171.75\\t185\\t195\\t182.75\\t186\\t189.25\\t183.75\\t201.25\\t175.75\\t158\\t150.75\\t176\\t188\\t181.75\\t161.25\\t175.25\\t191.75\\t179.5\\t200\\t190.75\\t183.5\\t182.25\\t178.75\\t176.5\\t167.75\\t181.5\\t154.25\\t148.25\\t188.5\\t190.75\\t170.5\\t175.5\\t188.75\\t175.25\\t168\\t160\\t178.5\\t185.5\\t177\\t188.5\\t182.25\\t190\\t200\\t162.75\\t194.5\\t183.75\\t164\\t187.75\\t186\\t171.5\\t187.5\\t173\\t184.25\\t161.5\\t177.5\\t181.25\\t183.25\\t189.75\\t188\\t180.5\\t165.25\\t172.75\\t161.75\\t165.75\\t175.25\\t162\\t150.75\\t183\\t196.5\\t160\\t173.25\\t202.25\\t188.75\\t185\\t195.75\\t200.75\\t177.75\\t182\\t187.5\\t192.75\\t203\\t152.75\\t186\\t170.5\\t193.25\\t'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-6cc8354df49b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mfiles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/rawData/00/rawdataEMCCD.dat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, like)\u001b[0m\n\u001b[1;32m   1144\u001b[0m         \u001b[0;31m# converting the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1145\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1146\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mread_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_loadtxt_chunksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1147\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mX\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1148\u001b[0m                 \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mread_data\u001b[0;34m(chunk_size)\u001b[0m\n\u001b[1;32m    995\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    996\u001b[0m             \u001b[0;31m# Convert each value according to its column and store\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 997\u001b[0;31m             \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mconv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mconv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconverters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    998\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    999\u001b[0m             \u001b[0;31m# Then pack it according to the dtype's nesting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    995\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    996\u001b[0m             \u001b[0;31m# Convert each value according to its column and store\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 997\u001b[0;31m             \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mconv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mconv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconverters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    998\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    999\u001b[0m             \u001b[0;31m# Then pack it according to the dtype's nesting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mfloatconv\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    732\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'0x'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromhex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m     \u001b[0mtyp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '0\\t50\\t200.25\\t187\\t189.25\\t173.75\\t210\\t186\\t193.5\\t179.5\\t214\\t175.75\\t191\\t177.75\\t170.75\\t178.5\\t176.75\\t171.75\\t185\\t195\\t182.75\\t186\\t189.25\\t183.75\\t201.25\\t175.75\\t158\\t150.75\\t176\\t188\\t181.75\\t161.25\\t175.25\\t191.75\\t179.5\\t200\\t190.75\\t183.5\\t182.25\\t178.75\\t176.5\\t167.75\\t181.5\\t154.25\\t148.25\\t188.5\\t190.75\\t170.5\\t175.5\\t188.75\\t175.25\\t168\\t160\\t178.5\\t185.5\\t177\\t188.5\\t182.25\\t190\\t200\\t162.75\\t194.5\\t183.75\\t164\\t187.75\\t186\\t171.5\\t187.5\\t173\\t184.25\\t161.5\\t177.5\\t181.25\\t183.25\\t189.75\\t188\\t180.5\\t165.25\\t172.75\\t161.75\\t165.75\\t175.25\\t162\\t150.75\\t183\\t196.5\\t160\\t173.25\\t202.25\\t188.75\\t185\\t195.75\\t200.75\\t177.75\\t182\\t187.5\\t192.75\\t203\\t152.75\\t186\\t170.5\\t193.25\\t'"
+      "Las carpetas con trace names 'without 866' 'with 866 and 854' son:\n",
+      "[58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72]\n",
+      "--------------------\n",
+      "Las carpetas con trace names 'rsbAx' 'bsbAx' son:\n",
+      "[0, 4, 74, 75, 77, 78, 81, 82, 84, 85]\n",
+      "--------------------\n",
+      "Las carpetas con trace names 'rsbRad1' 'bsbRad1' son:\n",
+      "[1, 5]\n",
+      "--------------------\n",
+      "Las carpetas con trace names 'rsbRad2' 'bsbRad2' son:\n",
+      "[2, 6]\n",
+      "--------------------\n",
+      "Las carpetas con trace names 'carrier dopp cool' 'carrier SB cool' son:\n",
+      "[3, 7, 73, 76, 79, 80, 83]\n"
      ]
     }
    ],
    "source": [
+    "files = {os.path.splitext(k)[0]: {} for k in os.listdir('data/rawData')}\n",
+    "\n",
     "for i,file in enumerate(os.listdir('data/rawData')):\n",
     "    name=str(os.path.splitext(file)[0])\n",
-    "    print(files[name])\n",
-    "    files[name]=np.transpose(np.loadtxt('data/rawData/00/rawdataEMCCD.dat', delimiter=' '))"
+    "    f = open(f'data/rawData/{name}/rawdataEMCCD.dat').read().split()\n",
+    "    files[name]=f\n",
+    "# Busco las carpetas que tienen trace names diferentes y las agrupo en distintos\n",
+    "# diccionarios uno para cada trace names.\n",
+    "\n",
+    "# Tambien hay carpetas que tienen archivos bkp, esos si son necesarios habria que tomarlos tambien.\n",
+    "l=[]\n",
+    "l1=[]\n",
+    "l2=[]\n",
+    "l3=[]\n",
+    "l4=[]\n",
+    "\n",
+    "for i in files:\n",
+    "    if files[i][14]==\"866'\":\n",
+    "        l.append(int(i))\n",
+    "    elif files[i][13]==\"'rsbAx'\":\n",
+    "        l1.append(int(i))\n",
+    "    elif files[i][13]==\"'rsbRad1'\":\n",
+    "        l2.append(int(i))\n",
+    "    elif files[i][13]==\"'rsbRad2'\":\n",
+    "        l3.append(int(i))\n",
+    "    elif files[i][13]==\"'carrier\":\n",
+    "        l4.append(int(i))\n",
+    "\n",
+    "l=sorted(l)\n",
+    "l1=sorted(l1)\n",
+    "l2=sorted(l2)\n",
+    "l3=sorted(l3)\n",
+    "l4=sorted(l4)\n",
+    "print(\"Las carpetas con trace names 'without 866' 'with 866 and 854' son:\")\n",
+    "print(l)\n",
+    "print('--------------------')\n",
+    "print(\"Las carpetas con trace names 'rsbAx' 'bsbAx' son:\")\n",
+    "print(l1)\n",
+    "print('--------------------')\n",
+    "print(\"Las carpetas con trace names 'rsbRad1' 'bsbRad1' son:\")\n",
+    "print(l2)\n",
+    "print('--------------------')\n",
+    "print(\"Las carpetas con trace names 'rsbRad2' 'bsbRad2' son:\")\n",
+    "print(l3)\n",
+    "print('--------------------')\n",
+    "print(\"Las carpetas con trace names 'carrier dopp cool' 'carrier SB cool' son:\")\n",
+    "print(l4)\n",
+    "\n",
+    "# Armo los diccionarios para cada trace name\n",
+    "w866={}\n",
+    "rsbAx={}\n",
+    "rsbRad1={}\n",
+    "rsbRad2={}\n",
+    "cdc={}\n",
+    "\n",
+    "# Lleno los diccionarios con sus respectivos archivos\n",
+    "for i in l:\n",
+    "    if i<8:\n",
+    "        flo=[]\n",
+    "        for j in files['0'+str(i)][46:]:\n",
+    "            flo.append(float(j))\n",
+    "        w866[str(i)]=np.transpose(flo)\n",
+    "    else:\n",
+    "        flo=[]\n",
+    "        for j in files[str(i)][46:]:\n",
+    "            flo.append(float(j))\n",
+    "        w866[str(i)]=np.transpose(flo)\n",
+    "\n",
+    "for i in l1:\n",
+    "    if i<8:\n",
+    "        flo=[]\n",
+    "        for j in files['0'+str(i)][42:]:\n",
+    "            flo.append(float(j))\n",
+    "        rsbAx[str(i)]=np.transpose(flo)\n",
+    "    else:\n",
+    "        flo=[]\n",
+    "        for j in files[str(i)][42:]:\n",
+    "            flo.append(float(j))\n",
+    "        rsbAx[str(i)]=np.transpose(flo)\n",
+    "\n",
+    "for i in l2:\n",
+    "    if i<8:\n",
+    "        flo=[]\n",
+    "        for j in files['0'+str(i)][42:]:\n",
+    "            flo.append(float(j))\n",
+    "        rsbRad1[str(i)]=np.transpose(flo)\n",
+    "    else:\n",
+    "        flo=[]\n",
+    "        for j in files[str(i)][42:]:\n",
+    "            flo.append(float(j))\n",
+    "        rsbRad1[str(i)]=np.transpose(flo)\n",
+    "\n",
+    "for i in l3:\n",
+    "    if i<8:\n",
+    "        flo=[]\n",
+    "        for j in files['0'+str(i)][42:]:\n",
+    "            flo.append(float(j))\n",
+    "        rsbRad2[str(i)]=np.transpose(flo)\n",
+    "    else:\n",
+    "        flo=[]\n",
+    "        for j in files[str(i)][42:]:\n",
+    "            flo.append(float(j))\n",
+    "        rsbRad2[str(i)]=np.transpose(flo)\n",
+    "\n",
+    "for i in l4:\n",
+    "    if i<8:\n",
+    "        flo=[]\n",
+    "        for j in files['0'+str(i)][46:]:\n",
+    "            flo.append(float(j))\n",
+    "        cdc[str(i)]=np.transpose(flo)\n",
+    "    else:\n",
+    "        flo=[]\n",
+    "        for j in files[str(i)][46:]:\n",
+    "            flo.append(float(j))\n",
+    "        cdc[str(i)]=np.transpose(flo)\n",
+    "        \n",
+    "# Arreglo los archivos de el diccionario file pero tomando desde el dato 46, me voy a comer alguno datos\n",
+    "# para algunos archivos\n",
+    "\n",
+    "for i in files.keys():\n",
+    "    val=[]\n",
+    "    for j in files[i][46:]:\n",
+    "        val.append(float(j))\n",
+    "    files[i]=np.transpose(val)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "immediate-office",
+   "metadata": {},
+   "source": [
+    "### Los archivos estan cargados ahora en forma de arrays"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weird-clerk",
+   "id": "collective-nylon",
    "metadata": {},
    "outputs": [],
    "source": []
