--- a/PracticaEspecial/Rabi/PlotDatarawData.ipynb
+++ b/PracticaEspecial/Rabi/PlotDatarawData.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "banner-tuesday",
+   "id": "apparent-promotion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-moderator",
+   "id": "spread-concrete",
    "metadata": {},
    "source": [
     "### Creo un diccioonario con los nombres de las carpetas y el contenido de ellas, luesgo busco las carpetas que tienen trace names diferentes y las agrupo en distintos diccionarios uno para cada trace names.\n",
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "missing-theorem",
+   "execution_count": 2,
+   "id": "consolidated-suspension",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "immediate-office",
+   "id": "fifteen-elimination",
    "metadata": {},
    "source": [
     "### Los archivos estan cargados ahora en forma de arrays"
@@ -195,8 +195,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "chemical-measure",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6912"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cdc['3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "collective-nylon",
+   "id": "extreme-correlation",
    "metadata": {},
    "outputs": [],
    "source": []
